Fixed overflowing record covers

--- a/src/css/senux/senux-page.scss
+++ b/src/css/senux/senux-page.scss
@@ -206,7 +206,7 @@ td.overdue {
 	border-right: none;
 
 	li {
-		display: block
+		display: block;
 		padding: .4em .6em;
 		list-style-type: none;
 
